[tool.poetry]
name = "potest"
version = "0.1.0"
description = "test"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
flask-migrate = "^4.0.7"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.1.0"
jsonpickle = "^3.2.2"
varname = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
